# pixartdiffusion

./: .gitignore  README.md  convert_to_ncnn.sh  export_onnx.py  export_torchscript.py  gen.py  infer.sh  infer_vulkan.sh  pt_to_png.py
cpp/: CMakeLists.txt  main.cpp
cpp_vulkan/: CMakeLists.txt  main.cpp
models/: unet.param  unet_scripted.pnnx.param  unet_scripted_ncnn.py  unet_scripted_pnnx.py
pixartdiffusion/: model.py  parameters.py  time_embed.py
